RESOLVED FIXED221379
REGRESSION(r271879) [SOUP] webrtc/datachannel/gather-candidates-networkprocess-crash.html is crashing in debug mode
https://bugs.webkit.org/show_bug.cgi?id=221379
Summary REGRESSION(r271879) [SOUP] webrtc/datachannel/gather-candidates-networkproces...
Lauro Moura
Reported 2021-02-03 21:03:16 PST
webrtc/datachannel/gather-candidates-networkprocess-crash.html Trace: Thread 1 (Thread 0x7f858c70c9c0 (LWP 106)): #0 WTFCrash() () at ../../Source/WTF/wtf/Assertions.cpp:295 #1 0x00007f85a0b18e5f in CRASH_WITH_INFO(...) () at DerivedSources/ForwardingHeaders/wtf/Assertions.h:713 #2 0x00007f85a0e7b1a1 in WTF::Vector<char, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc>::shrink(unsigned long) (this=0x7f85499f9968, size=8504) at DerivedSources/ForwardingHeaders/wtf/Vector.h:1121 #3 0x00007f85a16566d4 in WebKit::NetworkDataTaskSoup::didRead(long) (this=0x7f85499f9580, bytesRead=8504) at ../../Source/WebKit/NetworkProcess/soup/NetworkDataTaskSoup.cpp:834 #4 0x00007f85a16564fe in WebKit::NetworkDataTaskSoup::readCallback(_GInputStream*, _GAsyncResult*, WebKit::NetworkDataTaskSoup*) (inputStream=0x55eabbe84270 [WebKitDirectoryInputStream], result=0x55eabb e730c0, task=0x7f85499f9580) at ../../Source/WebKit/NetworkProcess/soup/NetworkDataTaskSoup.cpp:818 #5 0x00007f858d9319bb in async_ready_callback_wrapper (source_object=0x55eabbe84270 [WebKitDirectoryInputStream], res=0x55eabbe730c0, user_data=0x7f85499f9580) at ../gio/ginputstream.c:532 #6 0x00007f858d967539 in g_task_return_now (task=task@entry=0x55eabbe730c0 [GTask]) at ../gio/gtask.c:1215 #7 0x00007f858d96757d in complete_in_idle_cb (task=0x55eabbe730c0) at ../gio/gtask.c:1229 #8 0x00007f8590cb218f in g_main_dispatch (context=0x55eabbe4e9c0) at ../glib/gmain.c:3325 #9 g_main_context_dispatch (context=0x55eabbe4e9c0) at ../glib/gmain.c:4043 #10 0x00007f8590cb2538 in g_main_context_iterate (context=0x55eabbe4e9c0, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../glib/gmain.c:4119 #11 0x00007f8590cb2853 in g_main_loop_run (loop=0x55eabbe4fb70) at ../glib/gmain.c:4317 #12 0x00007f85a81bd614 in WTF::RunLoop::run() () at ../../Source/WTF/wtf/glib/RunLoopGLib.cpp:108 #13 0x00007f85a166c9d3 in WebKit::AuxiliaryProcessMainBase<WebKit::NetworkProcess, false>::run(int, char**) (this=0x7fffc9d1de20, argc=3, argv=0x7fffc9d1dfb8) at ../../Source/WebKit/Shared/AuxiliaryProce ssMain.h:70 #14 0x00007f85a1669c56 in WebKit::AuxiliaryProcessMain<WebKit::NetworkProcessMainSoup>(int, char**) (argc=3, argv=0x7fffc9d1dfb8) at ../../Source/WebKit/Shared/AuxiliaryProcessMain.h:96 #15 0x00007f85a1659dcf in WebKit::NetworkProcessMain(int, char**) (argc=3, argv=0x7fffc9d1dfb8) at ../../Source/WebKit/NetworkProcess/soup/NetworkProcessMainSoup.cpp:61 #16 0x000055eabba03889 in main(int, char**) (argc=3, argv=0x7fffc9d1dfb8) at ../../Source/WebKit/NetworkProcess/EntryPoint/unix/NetworkProcessMain.cpp:31
Attachments
Patch (3.05 KB, patch)
2021-02-05 04:58 PST, Carlos Garcia Campos
youennf: review+
Lauro Moura
Comment 1 2021-02-03 21:08:40 PST
Same crash for webrtc/video-h264.html in debug mode.
Lauro Moura
Comment 2 2021-02-03 21:11:16 PST
(In reply to Lauro Moura from comment #1) > Same crash for webrtc/video-h264.html in debug mode. Although its series of crashes started from between: WPE: r270185 and r270193 GTK: r270189 and r270194
Carlos Garcia Campos
Comment 3 2021-02-05 04:58:47 PST
Carlos Garcia Campos
Comment 4 2021-02-05 05:22:47 PST
Radar WebKit Bug Importer
Comment 5 2021-02-05 05:23:14 PST
Note You need to log in before you can comment on or make changes to this bug.