REGRESSION(r271879) [SOUP] webrtc/datachannel/gather-candidates-networkprocess-crash.html is crashing in debug mode https://bugs.webkit.org/show_bug.cgi?id=221379

Reviewed by Youenn Fablet.

Source/WebKit:

* NetworkProcess/soup/WebKitDirectoryInputStream.cpp:
(webkitDirectoryInputStreamRead): Fix bytes read calculation.

LayoutTests:

Remove expectations for tests that are now passing.

* platform/glib/TestExpectations:

Canonical link: https://commits.webkit.org/233733@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@272409 268f45cc-cd09-0410-ab3c-d52691b4dbfc